--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,11 +6,140 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:id="@+id/relative1">
+
+    <GridLayout
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_above="@+id/button7"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/text1">
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/button_1"
+            android:id="@+id/button1"
+            android:background="#ff000000"
+            android:textColor="#ffffffff"
+            android:layout_row="0"
+            android:layout_column="0" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/button_2"
+            android:id="@+id/button2"
+            android:background="#ff000000"
+            android:textColor="#ffffffff"
+            android:layout_row="0"
+            android:layout_column="1" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/button_3"
+            android:id="@+id/button3"
+            android:textColor="#ffffffff"
+            android:background="#ff000000"
+            android:layout_row="0"
+            android:layout_column="2" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/button_4"
+            android:id="@+id/button4"
+            android:background="#ff000000"
+            android:textColor="#ffffffff"
+            android:layout_row="1"
+            android:layout_column="0" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/button_5"
+            android:id="@+id/button5"
+            android:background="#ff000000"
+            android:textColor="#ffffffff"
+            android:layout_row="1"
+            android:layout_column="1" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/button_6"
+            android:id="@+id/button6"
+            android:background="#ff000000"
+            android:textColor="#ffffffff"
+            android:layout_row="1"
+            android:layout_column="2" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/button_7"
+            android:id="@+id/button7"
+            android:background="#ff000000"
+            android:textColor="#ffffffff"
+            android:layout_row="2"
+            android:layout_column="0" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/button_8"
+            android:id="@+id/button8"
+            android:clickable="true"
+            android:background="#ff000000"
+            android:textColor="#ffffffff"
+            android:layout_row="2"
+            android:layout_column="1" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/button_9"
+            android:id="@+id/button9"
+            android:clickable="true"
+            android:background="#ff000000"
+            android:textColor="#ffffffff"
+            android:layout_row="2"
+            android:layout_column="2" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/button_0"
+            android:id="@+id/button0"
+            android:background="#ff000000"
+            android:textColor="#ffffffff"
+            android:clickable="true"
+            android:layout_row="3"
+            android:layout_column="1" />
+    </GridLayout>
 
     <TextView
         android:text="@string/hello_world"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:textAlignment="center"
+        android:id="@+id/hello_world"
+        android:layout_toEndOf="@+id/text1"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="40dp"
+        android:text="@string/text_1"
+        android:id="@+id/text1"
+        android:gravity="right"
+        android:layout_below="@+id/hello_world"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true" />
+
 
 </RelativeLayout>
