--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,6 @@
     <GridLayout
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:layout_above="@+id/button7"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/text1">
 
@@ -133,13 +132,14 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="40dp"
         android:text="@string/text_1"
         android:id="@+id/text1"
-        android:gravity="right"
         android:layout_below="@+id/hello_world"
         android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentEnd="true"
+        android:gravity="end"
+        android:textSize="40sp"
+        android:textIsSelectable="true" />
 
 
 </RelativeLayout>
